国际化测试修改，提示信息显示修改

--- a/IOSShape/ja.lproj/Localizable.strings
+++ b/IOSShape/ja.lproj/Localizable.strings
@@ -32,7 +32,7 @@
 "backTipConfirm"              = "はい";
 
 "shareView_share"             = "シェア";
-"shareView_save"              = "Save";
+"shareView_save"              = "保存";
 "shareView_more"              = "そのほか";
 "shareView_NoInstagram"       = "instagramがインストールされていません";
 "shareView_NoFacebook"        = "facebookがインストールされていません";
