透明度显示方示

--- a/IOSShape/en.lproj/Localizable.strings
+++ b/IOSShape/en.lproj/Localizable.strings
@@ -47,3 +47,6 @@
 "shareView_remaindLater"      = "Remind later";
 "shareView_NoMoreTip"         = "No Thanks";
 "shareView_rateNow"           = "Rate Now";
+"shareView_slogan"            = "Add cool and interesting shapes to your Instagram photos.";
+
+
