--- a/IOSShape/es.lproj/Localizable.strings
+++ b/IOSShape/es.lproj/Localizable.strings
@@ -47,3 +47,6 @@
 "shareView_remaindLater"      = "Recuérdamelo más tarde";
 "shareView_NoMoreTip"         = "No,gracias";
 "shareView_rateNow"           = "Puntuar ahora";
+"shareView_slogan"            = "Añadir geniales e interesantes formas a tus fotos de Instagram";
+
+
