--- a/IOSShape/fr.lproj/Localizable.strings
+++ b/IOSShape/fr.lproj/Localizable.strings
@@ -46,3 +46,6 @@
 "shareView_remaindLater"      = "Rappelez plus tard";
 "shareView_NoMoreTip"         = "Non merci";
 "shareView_rateNow"           = "Notez maintenant";
+"shareView_slogan"            = "Ajoutez des formes cool et intéressantes à vos photos Instagram";
+
+
