--- a/IOSShape/it.lproj/Localizable.strings
+++ b/IOSShape/it.lproj/Localizable.strings
@@ -46,3 +46,5 @@
 "shareView_remaindLater"      = "Ricordamelo dopo";
 "shareView_NoMoreTip"         = "No grazie";
 "shareView_rateNow"           = "Vota ora";
+"shareView_slogan"            = "Aggiungi delle forme speciali alle tue foto su Instagram";
+
