--- a/IOSShape/ko.lproj/Localizable.strings
+++ b/IOSShape/ko.lproj/Localizable.strings
@@ -46,3 +46,6 @@
 "shareView_remaindLater"      = "나중에";
 "shareView_NoMoreTip"         = "그만 알림";
 "shareView_rateNow"           = "평가 하러 가기";
+"shareView_slogan"            = "Instagram 사진을 위한 예쁘고 재미있는 사진 모양 제공";
+
+
