--- a/IOSShape/ru.lproj/Localizable.strings
+++ b/IOSShape/ru.lproj/Localizable.strings
@@ -46,3 +46,5 @@
 "shareView_remaindLater"      = "Напомнить позже";
 "shareView_NoMoreTip"         = "Нет, спасибо";
 "shareView_rateNow"           = "Оценить сейчас";
+"shareView_slogan"            = "Добавляйте красивые и интересные формы на свои фото в Instagram";
+
