--- a/IOSShape/zh-Hans.lproj/Localizable.strings
+++ b/IOSShape/zh-Hans.lproj/Localizable.strings
@@ -46,3 +46,6 @@
 "shareView_remaindLater"      = "稍后再说";
 "shareView_NoMoreTip"         = "不再提醒";
 "shareView_rateNow"           = "马上评价";
+"shareView_slogan"            = "为Instagram的照片添加漂亮、有趣的形状";
+
+
