--- a/IOSShape/zh-Hant.lproj/Localizable.strings
+++ b/IOSShape/zh-Hant.lproj/Localizable.strings
@@ -47,3 +47,5 @@
 "shareView_remaindLater"      = "稍後再說";
 "shareView_NoMoreTip"         = "不再提醒";
 "shareView_rateNow"           = "馬上評價";
+"shareView_slogan"            = "為Instagram的照片添加漂亮、有趣的形狀.";
+
