--- a/IOSShape/de.lproj/Localizable.strings
+++ b/IOSShape/de.lproj/Localizable.strings
@@ -46,3 +46,5 @@
 "shareView_remaindLater"      = "Später erinnern";
 "shareView_NoMoreTip"         = "Nein danke";
 "shareView_rateNow"           = "Jetzt bewerten";
+"shareView_slogan"            = "Füge interessante Formen zu deinen Instagram Photos hinzu";
+
