--- a/IOSShape/pt-PT.lproj/Localizable.strings
+++ b/IOSShape/pt-PT.lproj/Localizable.strings
@@ -47,3 +47,5 @@
 "shareView_remaindLater"      = "Lembrar mais tarde";
 "shareView_NoMoreTip"         = "Não obrigado";
 "shareView_rateNow"           = "Avaliar agora";
+"shareView_slogan"            = "Adicione formatos incríveis e irados para suas fotos do Instagram";
+
