--- a/IOSShape/en.lproj/Localizable.strings
+++ b/IOSShape/en.lproj/Localizable.strings
@@ -48,6 +48,19 @@
 "shareView_remaindLater"      = "Remind later";
 "shareView_NoMoreTip"         = "No Thanks";
 "shareView_rateNow"           = "Rate Now";
-"shareView_slogan"            = "Add cool and interesting shapes to your Instagram photos.";
+"shareView_sloganShape"       = "Add cool and interesting shapes to your Instagram photos.";
+"shareView_sloganNoCrop"      = "Post full sized photos on Instagram without cropping!";
+
+
+
+
+
+
+
+
+
+
+
+
 
 
