--- a/IOSShape/es.lproj/Localizable.strings
+++ b/IOSShape/es.lproj/Localizable.strings
@@ -48,6 +48,18 @@
 "shareView_remaindLater"      = "Recuérdamelo más tarde";
 "shareView_NoMoreTip"         = "No,gracias";
 "shareView_rateNow"           = "Puntuar ahora";
-"shareView_slogan"            = "Añadir geniales e interesantes formas a tus fotos de Instagram";
+"shareView_sloganShape"       = "Añadir geniales e interesantes formas a tus fotos de Instagram";
+"shareView_sloganNoCrop"      = "Publica fotos enteras sin cortar en Instagram.";
+
+
+
+
+
+
+
+
+
+
+
 
 
