--- a/IOSShape/fr.lproj/Localizable.strings
+++ b/IOSShape/fr.lproj/Localizable.strings
@@ -47,6 +47,17 @@
 "shareView_remaindLater"      = "Rappelez plus tard";
 "shareView_NoMoreTip"         = "Non merci";
 "shareView_rateNow"           = "Notez maintenant";
-"shareView_slogan"            = "Ajoutez des formes cool et intéressantes à vos photos Instagram";
+"shareView_sloganShape"       = "Ajoutez des formes cool et intéressantes à vos photos Instagram";
+"shareView_sloganNoCrop"      = "Publiez des photos grandeur nature sans recadrage!";
+
+
+
+
+
+
+
+
+
+
 
 
