--- a/IOSShape/ja.lproj/Localizable.strings
+++ b/IOSShape/ja.lproj/Localizable.strings
@@ -47,6 +47,20 @@
 "shareView_remaindLater"      = "また後で";
 "shareView_NoMoreTip"         = "通知しない";
 "shareView_rateNow"           = "今すぐ評価";
-"shareView_slogan"            = "Instagramへの写真をもっとキレイに！もっとおもしろく！";
+"shareView_sloganShape"       = "Instagramへの写真をもっとキレイに！もっとおもしろく！";
+"shareView_sloganNoCrop"      = "トリミングなしで写真をInstagramへ";
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
