--- a/IOSShape/pt.lproj/Localizable.strings
+++ b/IOSShape/pt.lproj/Localizable.strings
@@ -48,6 +48,19 @@
 "shareView_remaindLater"      = "Lembrar mais tarde";
 "shareView_NoMoreTip"         = "Não obrigado";
 "shareView_rateNow"           = "Avaliar agora";
-"shareView_slogan"            = "Adicione formatos incríveis e irados para suas fotos do Instagram";
+"shareView_sloganShape"       = "Adicione formatos incríveis e irados para suas fotos do Instagram";
+"shareView_sloganNoCrop"      = "Não precisa recortar, poste agora sua foto inteira no Instagram";
+
+
+
+
+
+
+
+
+
+
+
+
 
 
