--- a/IOSShape/ru.lproj/Localizable.strings
+++ b/IOSShape/ru.lproj/Localizable.strings
@@ -47,5 +47,12 @@
 "shareView_remaindLater"      = "Напомнить позже";
 "shareView_NoMoreTip"         = "Нет, спасибо";
 "shareView_rateNow"           = "Оценить сейчас";
-"shareView_slogan"            = "Добавляйте красивые и интересные формы на свои фото в Instagram";
+"shareView_sloganShape"       = "Добавляйте красивые и интересные формы на свои фото в Instagram";
+"shareView_sloganNoCrop"      = "Публикуйте в Instagram полноразмерные фотографии, не обрезая их!";
+
+
+
+
+
+
 
