--- a/IOSShape/it.lproj/Localizable.strings
+++ b/IOSShape/it.lproj/Localizable.strings
@@ -47,5 +47,14 @@
 "shareView_remaindLater"      = "Ricordamelo dopo";
 "shareView_NoMoreTip"         = "No grazie";
 "shareView_rateNow"           = "Vota ora";
-"shareView_slogan"            = "Aggiungi delle forme speciali alle tue foto su Instagram";
+"shareView_sloganShape"       = "Aggiungi delle forme speciali alle tue foto su Instagram";
+"shareView_sloganNoCrop"      = "Pubblica delle foto a grandezza naturale su Instagram senza ritagliarle!";
+
+
+
+
+
+
+
+
 
