--- a/IOSShape/zh-Hans.lproj/Localizable.strings
+++ b/IOSShape/zh-Hans.lproj/Localizable.strings
@@ -47,6 +47,13 @@
 "shareView_remaindLater"      = "稍后再说";
 "shareView_NoMoreTip"         = "不再提醒";
 "shareView_rateNow"           = "马上评价";
-"shareView_slogan"            = "为Instagram的照片添加漂亮、有趣的形状";
+"shareView_sloganShape"       = "为Instagram的照片添加漂亮、有趣的形状";
+"shareView_sloganNoCrop"      = "无需裁剪将完整照片发布到Instagram";
+
+
+
+
+
+
 
 
