--- a/IOSShape/ru.lproj/Localizable.strings
+++ b/IOSShape/ru.lproj/Localizable.strings
@@ -9,8 +9,8 @@
 "isLatestVersion"             = "Используется последняя версия";
 "updateNow"                   = "Обновить сейчас";
 "remindLater"                 = "Напомнить позже";
-"user_camera_step"            = "Пожалуйста открыть камеру для разрешений Shape: Настройки телефона -> Безопасность -> Камера -> Shape (открытый)";
-"user_library_step"           = "Пожалуйста открыть камеру для разрешений Shape: Настройки телефона -> Безопасность -> Фото -> Shape (открытый)";
+"user_camera_step"            = "Пожалуйста открыть камеру для разрешений Shapegram: Настройки телефона -> Безопасность -> Камера -> Shapegram (открытый)";
+"user_library_step"           = "Пожалуйста открыть камеру для разрешений Shapegram: Настройки телефона -> Безопасность -> Фото -> Shapegram (открытый)";
 
 "aboutView_update"            = "Обновить";
 "aboutView_score"             = "Оценить";
@@ -18,7 +18,7 @@
 "aboutView_shareApp"          = "Поделиться приложением";
 "aboutView_followUs"          = "Следуйте за нами";
 "aboutView_shareTitle"        = "Формы для Instagram";
-"aboutView_content"           = "Я пользуюсь приложением \"Формы для Instagram\", в котором можно выбирать из более 110 крутых и интересных форм, более 100 фоновых изображений и фильтров для фотографий. Попробуй!";
+"aboutView_content"           = "Я пользуюсь приложением \"Shapegram\", в котором можно выбирать из более 110 крутых и интересных форм, более 100 фоновых изображений и фильтров для фотографий. Попробуй!";
 
 "editView_shape"              = "Форма";
 "editView_love"               = "Любовь";
@@ -43,7 +43,7 @@
 "shareView_saveFaile"         = "Не удалось сохранить изображение";
 "shareView_shareSuccess"      = "Опубликовано";
 "shareView_shareFaile"        = "Не удалось опубликовать";
-"shareView_rateMessage"       = "Если вам нравится приложение \"Формы для Instagram\", пожалуйста, оцените его и оставьте отзыв!";
+"shareView_rateMessage"       = "Если вам нравится приложение \"Shapegram\", пожалуйста, оцените его и оставьте отзыв!";
 "shareView_remaindLater"      = "Напомнить позже";
 "shareView_NoMoreTip"         = "Нет, спасибо";
 "shareView_rateNow"           = "Оценить сейчас";
