多语言增加水印，微调shape整体ＵＩ，初始透明度

--- a/IOSShape/de.lproj/Localizable.strings
+++ b/IOSShape/de.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "shareView_sloganShape"       = "Füge interessante Formen zu deinen Instagram Photos hinzu";
 "shareView_sloganNoCrop"      = "Poste unbeschnittene Photos in voller Größe auf Instagram";
 
+"showwatermark"               = "App Wasseryeichen hinzufügen";
 
 
 
