--- a/IOSShape/es.lproj/Localizable.strings
+++ b/IOSShape/es.lproj/Localizable.strings
@@ -52,6 +52,7 @@
 "shareView_sloganNoCrop"      = "Publica fotos enteras sin cortar en Instagram.";
 
 
+"showwatermark"               = "Mostrar el diseño de la aplicación";
 
 
 
