--- a/IOSShape/fr.lproj/Localizable.strings
+++ b/IOSShape/fr.lproj/Localizable.strings
@@ -51,6 +51,7 @@
 "shareView_sloganNoCrop"      = "Publiez des photos grandeur nature sans recadrage!";
 
 
+"showwatermark"               = "Ajouter l\'app watermark";
 
 
 
