--- a/IOSShape/it.lproj/Localizable.strings
+++ b/IOSShape/it.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "shareView_sloganShape"       = "Aggiungi delle forme speciali alle tue foto su Instagram";
 "shareView_sloganNoCrop"      = "Pubblica delle foto a grandezza naturale su Instagram senza ritagliarle!";
 
+"showwatermark"               = "Aggiungi design dell\'applicazione";
 
 
 
