--- a/IOSShape/ko.lproj/Localizable.strings
+++ b/IOSShape/ko.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "shareView_sloganShape"       = "Instagram 사진을 위한 예쁘고 재미있는 사진 모양 제공";
 "shareView_sloganNoCrop"      = "Instagram에 사진 자를 필요 없이 전체 그대로 올리기!";
 
+"showwatermark"               = "사진에 로고 표시";
 
 
 
