--- a/IOSShape/ru.lproj/Localizable.strings
+++ b/IOSShape/ru.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "shareView_sloganShape"       = "Добавляйте красивые и интересные формы на свои фото в Instagram";
 "shareView_sloganNoCrop"      = "Публикуйте в Instagram полноразмерные фотографии, не обрезая их!";
 
+"showwatermark"               = "Добавить название приложения";
 
 
 
