--- a/IOSShape/zh-Hans.lproj/Localizable.strings
+++ b/IOSShape/zh-Hans.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "shareView_sloganShape"       = "为Instagram的照片添加漂亮、有趣的形状";
 "shareView_sloganNoCrop"      = "无需裁剪将完整照片发布到Instagram";
 
+"showwatermark"               = "显示应用水印";
 
 
 
