--- a/IOSShape/zh-Hant.lproj/Localizable.strings
+++ b/IOSShape/zh-Hant.lproj/Localizable.strings
@@ -51,6 +51,7 @@
 "shareView_sloganShape"       = "為Instagram的照片添加漂亮、有趣的形狀.";
 "shareView_sloganNoCrop"      = "無需裁剪將完整照片發佈到Instagram";
 
+"showwatermark"               = "顯示應用水印";
 
 
 
