--- a/IOSShape/en.lproj/Localizable.strings
+++ b/IOSShape/en.lproj/Localizable.strings
@@ -51,6 +51,7 @@
 "shareView_sloganShape"       = "Add cool and interesting shapes to your Instagram photos.";
 "shareView_sloganNoCrop"      = "Post full sized photos on Instagram without cropping!";
 
+"showwatermark"               = "Add app watermark";
 
 
 
