--- a/IOSShape/pt.lproj/Localizable.strings
+++ b/IOSShape/pt.lproj/Localizable.strings
@@ -51,6 +51,7 @@
 "shareView_sloganShape"       = "Adicione formatos incríveis e irados para suas fotos do Instagram";
 "shareView_sloganNoCrop"      = "Não precisa recortar, poste agora sua foto inteira no Instagram";
 
+"showwatermark"               = "Adicionar aplicação Marca D\'água";
 
 
 
